--- a/NYT_PLACES_TO_VISIT_IN_2023_GEOCODING_AND_MAPPING.ipynb
+++ b/NYT_PLACES_TO_VISIT_IN_2023_GEOCODING_AND_MAPPING.ipynb
@@ -1572,6 +1572,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "Link for viewing the map:\n",
+        "https://nbviewer.org/github/prasannaml/GEOCODING-NYT-52-BEST-PLACES-TO-VISIT/blob/main/NYT_PLACES_TO_VISIT_IN_2023_GEOCODING_AND_MAPPING.ipynb"
+      ],
+      "metadata": {
+        "id": "mIh6ELcUoR2-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Insights from the map of 52 places to visit for 2023 from NYT\n",
         "\n",
         "1. Most of the places recommended for the year are from US and Europe.\n",
